--- a/尚学堂-java架构-第二期 - 学习/18 - Nosql、Redis入门课程讲解，安装、部署、命令/1.redis安装.md
+++ b/尚学堂-java架构-第二期 - 学习/18 - Nosql、Redis入门课程讲解，安装、部署、命令/1.redis安装.md
@@ -1,3 +1,15 @@
+<!-- TOC -->
+
+- [Redis简介](#redis简介)
+    - [优势](#优势)
+    - [缺点](#缺点)
+- [Redis安装](#redis安装)
+- [Redis数据结构简介](#redis数据结构简介)
+
+<!-- /TOC -->
+
+
+
 # Redis简介
 
 >Redis是一个以key-value形式并且使用内存存储的一个**非关系型数据库**。  
@@ -28,7 +40,19 @@
     >./redis-server
 5. 注意这种方式启动redis 使用的是默认配置。也可以通过启动参数告诉redis使用指定配置文件使用下面命令启动。
     >cd src  
-    >./redis-server ../redis.conf
+    ./redis-server ../redis.conf
+6. 启动redis-cli  
+    > ./redis-cli -h 127.0.0.1 -p 6379
+
+# Redis数据结构简介
+
+| 结构类型 | 储存的值 | 结构的读写能力 |
+| ------- | --------|---------------|
+| STRING | 可以是字符串、整数、浮点数 | 对整个字符串或者字符串的一部分执行操作。对整数和浮点数进行自增或自减操作， |
+| LIST   | 一个链表，链表上的每个节点都包含了字符串 | 从链表的两端推入或者弹出元素；根据偏移量对链表进行修剪；读取单个或者多个元素；根据值查找或者移除元素。 |
+| SET（无序集合） | 包含字符串的无序收集器，并且被包含的每个字符串的值都是唯一的。   | 添加、获取、移除单个元素；检查一个元素是否存在于集合之中。计算交集、并集、差集；从集合之中随机获取元素 |
+| HASH | 包含键值对的无序散列 | 添加、获取、移除单个键值对 |
+| ZSET（有序集合）| 字符串成员与浮点数值之间的有序映射。元素排列顺序由分值大小决定 | 添加、获取、删除单个元素。根据分值范围或者成员来获取元素 |
 
 
 
