--- a/尚学堂-java架构-第二期 - 学习/18 - Nosql、Redis入门课程讲解，安装、部署、命令/1.redis安装.md
+++ b/尚学堂-java架构-第二期 - 学习/18 - Nosql、Redis入门课程讲解，安装、部署、命令/1.redis安装.md
@@ -28,10 +28,10 @@
 # Redis安装
 1. 首先需要安装gcc  
    >sudo apt-get install gcc
-2. 下载redis。本教程使用最新版本5.0  
-   >wget http://download.redis.io/releases/redis-5.0.0.tar.gz  
-   tar xzf redis-5.0.0.tar.gz
-   cd redis-5.0.0/
+2. 下载redis。本教程使用4.0  
+   >wget http://download.redis.io/releases/redis-4.0.0.tar.gz  
+   tar xzf redis-4.0.0.tar.gz
+   cd redis-4.0.0/
 3. 编译  
     >make
 4. make完后redis-5.0.0目录下会出现编译后的redis服务程序redis-server,还有用于测试的客户端程序redis-cli,两个程序位于安装目录 src 目录下：
