--- a/尚学堂-java架构-第二期 - 学习/18 - Nosql、Redis入门课程讲解，安装、部署、命令/3.redis主从复制.md
+++ b/尚学堂-java架构-第二期 - 学习/18 - Nosql、Redis入门课程讲解，安装、部署、命令/3.redis主从复制.md
@@ -20,4 +20,8 @@
 
 - 克隆master后修改slave的ip地址
 - 修改配置文件：redis.conf  
-    修改配置文件：redis.conf
+    5.0以前版本配置
+    >slaveof　192.168.10.1　6379　　
+    
+    5.0版本配置　　
+    >replicaof　192.168.10.1　6379
