--- a/尚学堂-java架构-第二期 - 学习/18 - Nosql、Redis入门课程讲解，安装、部署、命令/1.redis安装.md
+++ b/尚学堂-java架构-第二期 - 学习/18 - Nosql、Redis入门课程讲解，安装、部署、命令/1.redis安装.md
@@ -30,7 +30,7 @@
    >sudo apt-get install gcc
 2. 下载redis。本教程使用4.0  
    >wget http://download.redis.io/releases/redis-4.0.0.tar.gz  
-   tar xzf redis-4.0.0.tar.gz
+   tar xzf redis-4.0.0.tar.gz  
    cd redis-4.0.0/
 3. 编译  
     >make
@@ -43,6 +43,9 @@
     ./redis-server ../redis.conf
 6. 启动redis-cli  
     > ./redis-cli -h 127.0.0.1 -p 6379
+7. 配置后台启动
+    > 将redis.conf 文件中daemonize no改为 daemonize yes保存退出
+
 
 # Redis数据结构简介
 
