--- a/尚学堂-java架构-第二期 - 学习/18 - Nosql、Redis入门课程讲解，安装、部署、命令/3.redis主从复制.md
+++ b/尚学堂-java架构-第二期 - 学习/18 - Nosql、Redis入门课程讲解，安装、部署、命令/3.redis主从复制.md
@@ -25,3 +25,7 @@
     
     5.0版本配置　　
     >replicaof　192.168.10.1　6379
+
+- 修改从服务器密码
+    >如果主服务器不设置密码则，不用配置  
+    >masterauth　&lt;master-password&gt;
