redis 集群，持久化。。。。未完成

--- a/尚学堂-java架构-第二期 - 学习/18 - Nosql、Redis入门课程讲解，安装、部署、命令/3.redis主从复制.md
+++ b/尚学堂-java架构-第二期 - 学习/18 - Nosql、Redis入门课程讲解，安装、部署、命令/3.redis主从复制.md
@@ -1,4 +1,16 @@
 
+<!-- TOC -->
+
+- [主从复制](#主从复制)
+    - [主从复制过程](#主从复制过程)
+        - [全量同步](#全量同步)
+        - [增量同步](#增量同步)
+        - [**注意点**](#注意点)
+    - [**主从复制的一些特点**](#主从复制的一些特点)
+    - [主从同步中需要注意几个问题](#主从同步中需要注意几个问题)
+    - [主从复制配置](#主从复制配置)
+
+<!-- /TOC -->
 
 # 主从复制
 
@@ -90,6 +102,3 @@ Redis全量复制一般发生在Slave初始化阶段，这时Slave需要将Maste
 - 修改从服务器密码
     >如果主服务器不设置密码则，不用配置  
     >masterauth　&lt;master-password&gt;
-
-
-## 主从复制命令
