--- a/框架工具学习/nginx/1.nginx入门.md
+++ b/框架工具学习/nginx/1.nginx入门.md
@@ -1,17 +1,34 @@
 
 
+<!-- TOC -->
+
+- [什么是nginx](#什么是nginx)
+- [反向代理服务器](#反向代理服务器)
+- [nginx的应用场景](#nginx的应用场景)
+- [安全架构](#安全架构)
+- [nginx优点](#nginx优点)
+- [ubuntu安装nginx](#ubuntu安装nginx)
+    - [1. 基于apt-get安装](#1-基于apt-get安装)
+    - [2. 通过源码包编译安装](#2-通过源码包编译安装)
+- [nginx 服务器重启命令，关闭](#nginx-服务器重启命令关闭)
+
+<!-- /TOC -->
+
+
 
 # 什么是nginx
 
 nginx是一款**高性能的http 服务器/反向代理服务器及电子邮件（IMAP/POP3）代理服务器**。由俄罗斯的程序设计师Igor Sysoev所开发，官方测试nginx能够支撑**5万并发链接**，并且**cpu、内存等资源消耗却非常低，运行非常稳定**，所以现在很多知名的公司都在使用nginx。
 
 # 反向代理服务器
+
 nginx (作者：俄国人)  
 lvs (作者：中国人)  
 F5(硬件实现)  
 haproxy
 
 # nginx的应用场景
+
 - http服务器：nginx是一个http服务器，可以提供http服务，可以做网页静态服务器。
 - 虚拟主机：可以实现一台服务器多个网站。例如个人网站使用的虚拟主机。
 - 反向代理，负载均衡：当网站的访问量达到一定程度后，单台服务器不能满足用户的请求，需要用多台服务器作为集群，使用nginx做反向代理。并且多台服务可以平均分担负载。不会因为某台服务器负载过高宕机，而某台服务器闲置的情况(不暴露集群IP)。
@@ -19,6 +36,7 @@ haproxy
     ![](https://raw.githubusercontent.com/woaixiaotimo/img/master/2018-11-13-16-22.png)
 
 # 安全架构
+
 1. 使用nginx反向代理,不暴露真实IP地址
 2. 使用https，防止抓包分析http请求
 3. 搭建企业黑白名单系统(防盗链)
@@ -34,6 +52,281 @@ haproxy
 - nginx配置简单
 - 可以不暴露真实服务器IP地址
 
+
+# ubuntu安装nginx
+
+## 1. 基于apt-get安装
+>sudo apt-get install nginx  
+
+
+安装好的文件位置:  
+
+    /usr/sbin/nginx：主程序
+
+    /etc/nginx：存放配置文件
+
+    /usr/share/nginx：存放静态文件
+
+    /var/log/nginx：存放日志
+
+
+Nginx如果指定默认加载/etc/nginx/nginx.conf的配置文件。如果要查看加载的是哪个配置文件，可以用这个命令**sudo nginx -t**或者**ps -ef | grep nginx**
+
+然后通过这种方式安装的，会自动创建服务，会自动在/etc/init.d/nginx新建服务脚本，然后就可以使用
+**sudo service nginx {start|stop|restart|reload|force-reload|status|configtest|rotate|upgrade}**
+命令启动。
+
+/usr/sbin目录下，所以能直接在终端中使用nginx命令而无需指定路径
+
+
+
+## 2. 通过源码包编译安装
+这种方式可以自定安装指定的模块以及最新的版本。方式更灵活。
+
+官方下载页面：http://nginx.org/en/download.html
+
+configure配置文件详解：http://nginx.org/en/docs/configure.html
+
+1. 安装依赖项
+
+    安装gcc g++的依赖库
+    >sudo apt-get install build-essential  
+    sudo apt-get install libtool  
+
+    安装pcre依赖库（http://www.pcre.org/）
+    >sudo apt-get update  
+    sudo apt-get install libpcre3 libpcre3-dev
+
+    安装zlib依赖库（http://www.zlib.net）
+    >sudo apt-get install zlib1g-dev
+
+
+    安装SSL依赖库（16.04默认已经安装了）
+    >sudo apt-get install openssl  
+
+    如果后续nginx安装失败请执行下述操作:  
+    apt-get 无法安装 openssl-devel请执行：  
+    >sudo apt-get install openssl   
+    sudo apt-get install libssl-dev）
+
+2. 安装nginx
+
+    下载最新版本：  
+    >wget http://nginx.org/download/nginx-1.14.1.tar.gz   
+
+    解压：  
+    >tar -zxvf nginx-1.14.1.tar.gz  
+
+    进入解压目录：  
+    >cd nginx-1.14.1  
+
+    配置：  
+    >./configure
+
+    编译：  
+    >make  
+
+    安装：  
+    >sudo make install  
+
+    启动(注意：-c 指定配置文件的路径，不加的话，nginx会自动加载默认路径的配置文件，可以通过-h查看帮助命令。 ):
+    >sudo /usr/local/nginx/sbin/nginx -c /usr/local/nginx/conf/nginx.conf  
+
+    查看进程：  
+    >ps -ef | grep nginx
+
+3. 配置软链接  
+
+    现在就可以不用路径直接输入nginx启动。
+
+    >sudo ln -s /usr/local/nginx/sbin/nginx /usr/bin/nginx
+
+4. 设置开机脚本
+
+    在/etc/init.d/下创建nginx文件，sudo vim /etc/init.d/nginx，内容如下：
+
+    ```
+    #!/bin/sh
+    #
+    # nginx - this script starts and stops the nginx daemon
+    #
+    # chkconfig:   - 85 15
+    # description:  NGINX is an HTTP(S) server, HTTP(S) reverse \
+    #               proxy and IMAP/POP3 proxy server
+    # processname: nginx
+    # config:      /etc/nginx/nginx.conf
+    # config:      /etc/sysconfig/nginx
+    # pidfile:     /var/run/nginx.pid
+
+    # Source function library.
+    . /etc/rc.d/init.d/functions
+
+    # Source networking configuration.
+    . /etc/sysconfig/network
+
+    # Check that networking is up.
+    [ "$NETWORKING" = "no" ] && exit 0
+
+    nginx="/usr/sbin/nginx"
+    prog=$(basename $nginx)
+
+    NGINX_CONF_FILE="/etc/nginx/nginx.conf"
+
+    [ -f /etc/sysconfig/nginx ] && . /etc/sysconfig/nginx
+
+    lockfile=/var/lock/subsys/nginx
+
+    make_dirs() {
+    # make required directories
+    user=`$nginx -V 2>&1 | grep "configure arguments:" | sed 's/[^*]*--user=\([^ ]*\).*/\1/g' -`
+    if [ -z "`grep $user /etc/passwd`" ]; then
+        useradd -M -s /bin/nologin $user
+    fi
+    options=`$nginx -V 2>&1 | grep 'configure arguments:'`
+    for opt in $options; do
+        if [ `echo $opt | grep '.*-temp-path'` ]; then
+            value=`echo $opt | cut -d "=" -f 2`
+            if [ ! -d "$value" ]; then
+                # echo "creating" $value
+                mkdir -p $value && chown -R $user $value
+            fi
+        fi
+    done
+    }
+
+    start() {
+        [ -x $nginx ] || exit 5
+        [ -f $NGINX_CONF_FILE ] || exit 6
+        make_dirs
+        echo -n $"Starting $prog: "
+        daemon $nginx -c $NGINX_CONF_FILE
+        retval=$?
+        echo
+        [ $retval -eq 0 ] && touch $lockfile
+        return $retval
+    }
+
+    stop() {
+        echo -n $"Stopping $prog: "
+        killproc $prog -QUIT
+        retval=$?
+        echo
+        [ $retval -eq 0 ] && rm -f $lockfile
+        return $retval
+    }
+
+    restart() {
+        configtest || return $?
+        stop
+        sleep 1
+        start
+    }
+
+    reload() {
+        configtest || return $?
+        echo -n $"Reloading $prog: "
+        killproc $nginx -HUP
+        RETVAL=$?
+        echo
+    }
+
+    force_reload() {
+        restart
+    }
+
+    configtest() {
+    $nginx -t -c $NGINX_CONF_FILE
+    }
+
+    rh_status() {
+        status $prog
+    }
+
+    rh_status_q() {
+        rh_status >/dev/null 2>&1
+    }
+
+    case "$1" in
+        start)
+            rh_status_q && exit 0
+            $1
+            ;;
+        stop)
+            rh_status_q || exit 0
+            $1
+            ;;
+        restart|configtest)
+            $1
+            ;;
+        reload)
+            rh_status_q || exit 7
+            $1
+            ;;
+        force-reload)
+            force_reload
+            ;;
+        status)
+            rh_status
+            ;;
+        condrestart|try-restart)
+            rh_status_q || exit 0
+                ;;
+        *)
+            echo $"Usage: $0 {start|stop|status|restart|condrestart|try-restart|reload|force-reload|configtest}"
+            exit 2
+    esac
+    
+    ```
+
+    需要修改两处地方：
+
+    ```
+    第一：nginx="/usr/sbin/nginx"
+    　　　　　这里修改成你nginx安装时启动文件放在的路径，比如我nginx安装在/usr/local/nginx中，对应启动文件在
+    　　　　　/usr/local/nginx/sbin/nginx，所以把nginx启动路径换成 nginx="/usr/local/nginx/sbin/nginx"
+
+    第二：NGINX_CONF_FILE="/etc/nginx/nginx.conf"
+    　　　　 这里同上面一样，我的nginx配置文件也放在 /usr/local/nginx安装目录中，具体在 /usr/local/nginx/conf/nginx.conf
+    　　　　 所以把nginx配置路径换成 NGINX_CONF_FILE="/usr/local/nginx/conf/nginx.conf"
+    
+    ```
+
+
+    设置服务脚本有执行权限
+    >sudo chmod +x /etc/init.d/nginx  
+
+    注册服务
+    >cd /etc/init.d/  
+    sudo update-rc.d nginx defaults
+
+
+    现在基本上就可以开机启动了，常用的命令如下：
+
+    >sudo service nginx {start|stop|restart|reload|force-reload|status|configtest|rotate|upgrade}
+
+# nginx 服务器重启命令，关闭
+nginx -s reload  ：修改配置后重新加载生效  
+nginx -s reopen  ：重新打开日志文件  
+nginx -t -c /path/to/nginx.conf 测试nginx配置文件是否正确  
+
+关闭nginx：  
+>nginx -s stop  :快速停止nginx  
+nginx -s quit  ：完整有序的停止nginx
+
+其他的停止nginx 方式：
+
+>ps -ef | grep nginx  
+kill -QUIT 主进程号     ：从容停止Nginx  (推荐)
+kill -TERM 主进程号     ：快速停止Nginx  
+pkill -9 nginx          ：强制停止Nginx  
+
+
+
+启动nginx:
+> nginx -c /path/to/nginx.conf
+
+平滑重启nginx：
+kill -HUP 主进程号
 
 
 
