宕机容错完成

--- a/框架工具学习/nginx/2.nginx功能配置.md
+++ b/框架工具学习/nginx/2.nginx功能配置.md
@@ -1,7 +1,25 @@
 
 
 
+<!-- TOC -->
 
+- [nginx-反向代理](#nginx-反向代理)
+    - [什么是反向代理](#什么是反向代理)
+    - [配置反向代理](#配置反向代理)
+- [负载均衡](#负载均衡)
+    - [需求](#需求)
+    - [配置负载均衡](#配置负载均衡)
+        - [轮训](#轮训)
+        - [权重weight - 常用](#权重weight---常用)
+        - [ip_hash - 不推荐](#ip_hash---不推荐)
+        - [fair（第三方）- 不推荐](#fair第三方--不推荐)
+        - [url_hash（第三方）- 特殊条件下应用](#url_hash第三方--特殊条件下应用)
+- [nginx-宕机容错](#nginx-宕机容错)
+- [nginx搭建api网关(解决跨域问题)](#nginx搭建api网关解决跨域问题)
+    - [跨域解决方案](#跨域解决方案)
+    - [使用nginx搭建网关原理](#使用nginx搭建网关原理)
+
+<!-- /TOC -->
 
 
 # nginx-反向代理
@@ -206,5 +224,64 @@ ps：关于nginx负载均衡的一些参数介绍例子
         hash $request_uri; 
         hash_method crc32; 
     } 
+
+```
+
+
+
+# nginx-宕机容错
+
+在访问某服务器1秒内没有响应的话，自动轮询下一台服务器。   
+
+配置
+```
+    server {
+        listen       80;
+        server_name  www.nginx.cn;
+        location / {
+            proxy_pass  http://backserver;
+	        index  index.html index.htm;
+ 
+            proxy_connect_timeout 1;
+            proxy_send_timeout 1;
+            proxy_read_timeout 1;
+ 
+        }
+		
+    }
+
+```
+
+# nginx搭建api网关(解决跨域问题)
+
+网关：拦截请求，进行分发
+
+## 跨域解决方案
+
+- jsonp:不支持post请求，支持get请求
+- httpclient:内部转发
+- 使用http响应头允许跨域设置
+- 使用nginx搭建企业级api接口网关
+- 使用spring clould zull网关
+
+## 使用nginx搭建网关原理
+
+域名相同，项目不同
+
+```
+server {
+    listen       80;
+    server_name  www.itmayiedu.com;
+     
+    location /A {  
+        proxy_pass  http://127.0.0.1:8080/A;
+        index  index.html index.htm;
+    }
+        
+    location /B {  
+        proxy_pass  http://127.0.0.1:8081/B;  
+        index  index.html index.htm;
+    }
+}
 
 ```
