接下来开始学习nginx高可用

--- a/框架工具学习/nginx/1.nginx入门.md
+++ b/框架工具学习/nginx/1.nginx入门.md
@@ -15,7 +15,6 @@
 <!-- /TOC -->
 
 
-
 # 什么是nginx
 
 nginx是一款**高性能的http 服务器/反向代理服务器及电子邮件（IMAP/POP3）代理服务器**。由俄罗斯的程序设计师Igor Sysoev所开发，官方测试nginx能够支撑**5万并发链接**，并且**cpu、内存等资源消耗却非常低，运行非常稳定**，所以现在很多知名的公司都在使用nginx。
@@ -61,13 +60,17 @@ haproxy
 
 安装好的文件位置:  
 
-    /usr/sbin/nginx：主程序
+    主程序
+    /usr/sbin/nginx
 
-    /etc/nginx：存放配置文件
+    存放配置文件
+    /etc/nginx
 
-    /usr/share/nginx：存放静态文件
+    存放静态文件
+    /usr/share/nginx
 
-    /var/log/nginx：存放日志
+    存放日志
+    /var/log/nginx
 
 
 Nginx如果指定默认加载/etc/nginx/nginx.conf的配置文件。如果要查看加载的是哪个配置文件，可以用这个命令**sudo nginx -t**或者**ps -ef | grep nginx**
