--- a/框架工具学习/nginx/2.nginx功能配置.md
+++ b/框架工具学习/nginx/2.nginx功能配置.md
@@ -1,25 +1,7 @@
 
 
+[[toc]]
 
-<!-- TOC -->
-
-- [nginx-反向代理](#nginx-反向代理)
-    - [什么是反向代理](#什么是反向代理)
-    - [配置反向代理](#配置反向代理)
-- [负载均衡](#负载均衡)
-    - [需求](#需求)
-    - [配置负载均衡](#配置负载均衡)
-        - [轮训](#轮训)
-        - [权重weight - 常用](#权重weight---常用)
-        - [ip_hash - 不推荐](#ip_hash---不推荐)
-        - [fair（第三方）- 不推荐](#fair第三方--不推荐)
-        - [url_hash（第三方）- 特殊条件下应用](#url_hash第三方--特殊条件下应用)
-- [nginx-宕机容错](#nginx-宕机容错)
-- [nginx搭建api网关(解决跨域问题)](#nginx搭建api网关解决跨域问题)
-    - [跨域解决方案](#跨域解决方案)
-    - [使用nginx搭建网关原理](#使用nginx搭建网关原理)
-
-<!-- /TOC -->
 
 
 # nginx-反向代理
