--- a/框架工具学习/redis/1.redis安装.md
+++ b/框架工具学习/redis/1.redis安装.md
@@ -22,10 +22,40 @@
 >对数据高并发读写  
 >对海量数据高效率存储和访问  
 >对数据的可扩展和高可用性
+
+
 ## 缺点
 >redis无法做到太复杂的关系数据库模型。(关系型数据库可以非常容易做到)  
 
-# Redis安装
+## apt安装
+在 Ubuntu 系统安装 Redi 可以使用以下命令:
+
+>sudo apt-get update  
+>sudo apt-get install redis-server    
+
+启动 Redis
+
+>redis-server
+
+查看 redis 是否启动？  
+
+>redis-cli  
+
+
+以上命令将打开以下终端：
+
+>redis 127.0.0.1:6379>  
+127.0.0.1 是本机 IP ，6379 是 redis 服务端口。现在我们输入 PING 命令。
+
+>redis 127.0.0.1:6379> ping  
+PONG  
+
+以上说明我们已经成功安装了redis。
+
+
+
+
+# Redis编译安装
 1. 首先需要安装gcc  
    >sudo apt-get install gcc
 2. 下载redis。本教程使用4.0  
