--- a/框架工具学习/nginx/1.nginx入门.md
+++ b/框架工具学习/nginx/1.nginx入门.md
@@ -320,14 +320,14 @@ nginx -s quit  ：完整有序的停止nginx
 其他的停止nginx 方式：
 
 >ps -ef | grep nginx  
-kill -QUIT 主进程号     ：从容停止Nginx  (推荐)
-kill -TERM 主进程号     ：快速停止Nginx  
+kill -QUIT 主进程号     ：从容停止Nginx  (推荐)  
+kill -TERM 主进程号     ：快速停止Nginx    
 pkill -9 nginx          ：强制停止Nginx  
 
 
 
 启动nginx:
-> nginx -c /path/to/nginx.conf
+>./nginx -c /path/to/nginx.conf
 
 平滑重启nginx：
 kill -HUP 主进程号
