--- a/框架工具学习/redis/5.redis集群.md
+++ b/框架工具学习/redis/5.redis集群.md
@@ -55,19 +55,21 @@
     appendonly yes # aof日志开启  有需要就开启，它会每次写操作都记录一条日志
 
 3. 安装集群工具
-    >install ruby #安装ruby  
+    >apt-get install ruby #安装ruby  
     gem install redis #安装集群工具
 
-4. 创建集群
-    >启动六个redis  
-    >./redis-cli -h 192.168.10.151 -p 7001 ./7001/redis.conf  
-    >./redis-cli -h 192.168.10.151 -p 7002 ./7002/redis.conf    
-    >./redis-cli -h 192.168.10.151 -p 7003 ./7003/redis.conf    
-    >./redis-cli -h 192.168.10.151 -p 7004 ./7004/redis.conf    
-    >./redis-cli -h 192.168.10.151 -p 7005 ./7005/redis.conf    
-    >./redis-cli -h 192.168.10.151 -p 7006 ./7006/redis.conf    
-    >创建集群  
-    ./redis-trib.rb  create  --replicas  1   192.168.10.151:7001  192.168.10.151:7003 192.168.10.151:7003  192.168.10.151:7004  192.168.10.151:7005 192.168.10.151:7006
+4. 创建集群  
+    启动六个redis  
+    >./redis-server -h 192.168.10.151 -p 7001 ./7001/redis.conf  
+    >./redis-server -h 192.168.10.151 -p 7002 ./7002/redis.conf    
+    >./redis-server -h 192.168.10.151 -p 7003 ./7003/redis.conf    
+    >./redis-server -h 192.168.10.151 -p 7004 ./7004/redis.conf    
+    >./redis-server -h 192.168.10.151 -p 7005 ./7005/redis.conf    
+    >./redis-server -h 192.168.10.151 -p 7006 ./7006/redis.conf    
+
+    创建集群  
+
+    >./redis-trib.rb  create  --replicas  1   192.168.10.151:7001  192.168.10.151:7003 192.168.10.151:7003  192.168.10.151:7004  192.168.10.151:7005 192.168.10.151:7006
 
 
 # redis-trib.rb命令详解
